Add extra check to avoid crash on macOS

BUG:455690